[package]
name = "pathing"
version = "0.0.1"
authors = ["JJJimbo1"]
edition = "2021"

[dependencies]
pathfinding = "4.3.2"
# serde = { version = "1.0.191", optional = true }
serde = { version = "1.0.192", features = ["derive"] }
# serde = { version = "1.0.192" }
fxhash = "0.2.1"
# valley_map = { git = "https://github.com/JJJimbo1/vmap.git", features = ["serde"]}
valley_map = { git = "https://github.com/JJJimbo1/vmap.git"}

# [features]
# serde = ["dep:serde", "valley_map/serde"]

[dev-dependencies]
oorandom = "11.1.3"
criterion = "0.5.1"

# [[bench]]
# name = "benches"
# harness = false

[profile.test]
opt-level = 3