[package]
name = "pathing"
version = "0.0.1"
authors = ["JJJimbo1"]
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"], optional = true }
pathfinding = "4.11.0"
vmap = { git = "https://github.com/JJJimbo1/vmap.git"}

[features]
serde = ["dep:serde", "vmap/serde"]

[dev-dependencies]
oorandom = "11.1.4"
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false

[profile.test]
opt-level = 3