[package]
name = "pathing"
version = "0.0.1"
authors = ["JJJimbo1"]
edition = "2021"

[dependencies]
serde = { version = "1.0.*", features = ["derive"], optional = true }
pathfinding = "4.14.*"
vmap = { git = "https://github.com/JJJimbo1/vmap.git"}
oorandom = "11.1.*"

[features]
serde = ["dep:serde", "vmap/serde"]

[dev-dependencies]
oorandom = "11.1.4"
criterion = "0.8.1"

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = 2